--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
     <title>Airsoft</title>
 </head>
 <body>
-    <section class="bg-green-500">
-        <h1 class="text-2xl">CQB caveira airsoft</h1>
+    <section class="bg-yellow-900">
+        <h1 class="text-2xl text-white">CQB caveira airsoft</h1>
     </section>
-    <section class="bg-blue-400">
-        <h1 class="text-2xl">Sobre</h1>
-        <h1 class="text-xl">...</h1>
+    <section class="bg-black">
+        <h1 class="text-2xl text-white">Sobre</h1>
+        <h1 class="text-xl text-white">...</h1>
     </section>
-    <section class="bg-blue-400">
-        <h1 class="text-2xl">Redes Socias</h1><br>
+    <section class="bg-black">
+        <h1 class="text-2xl text-white">Redes Socias</h1><br>
         <nav class="socialNetworks">
             <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Instagram"><a href="#">Instagram</a></button><br><br>
             <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Facebook"><a href="#">Facebook</a></button><br><br>
             <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Whatsap"><a href="#">Whatsaap</a></button><br><br>
         </nav>
     </section>
-    <section class="bg-blue-400">
-        <h1 class="text-2xl">Localização</h1><br>
+    <section class="bg-black">
+        <h1 class="text-2xl text-white">Localização</h1><br>
         <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d708.1286432181121!2d-43.680514743785984!3d-22.975384070838867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bf0fa29d67273%3A0xe21d2e9f9a452d6d!2sEstr.%20Santo%20Ant%C3%B4nio%20-%20Sepetiba%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2023535-650!5e0!3m2!1spt-BR!2sbr!4v1693876423936!5m2!1spt-BR!2sbr" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe><br>
     </section>
-    <footer class="bg-green-500">
-        <h1>Todos os Direitos Reservados © CQB caveira airsoft</h1>
+    <footer class="bg-yellow-900">
+        <h1 class="text-white">Todos os Direitos Reservados © CQB caveira airsoft</h1>
     </footer>
 </body>
 </html>
