--- a/index.html
+++ b/index.html
@@ -10,25 +10,59 @@
 </head>
 <body>
     <section class="bg-yellow-900">
-        <h1 class="text-2xl text-white">CQB caveira airsoft</h1>
+        <h1 class="text-2xl text-white">CQB Caveira Airsoft &#128299</h1>
     </section>
     <section class="bg-black">
-        <h1 class="text-2xl text-white">Sobre</h1>
+        <h1 class="space text-2xl text-white">Sobre</h1>
+        <p class="text-lg socialNetworks text-white">
+            Somos amantes e admiradores do esporte, buscamos trazer para o local um novo espaço de lazer e divulgar o esporte
+        </p>
+        <p class="text-lg socialNetworks text-white">
+            maravilhoso que é o Airsoft. Venha se sentir como Jhon Wick em uma batalha feroz com seus amigos e mostre que você
+        </p>
+        <p class="text-lg socialNetworks text-white">
+            é o rei ou a rainha da bala, se sinta como em um jogo na vida real demonstre sua habilidade e sua mira em nossa arena.
+        </p>
+    </section>
+    <section class="space bg-black">
+        <h1 class="text-2xl text-white">Arena</h1>
+        <p class="text-lg socialNetworks text-white">
+            Nossa arena possui uma área de 525m² entre obstáculos e mata, por ser um CQB (Close Quarters Battle)
+        </p>
+        <p class="text-lg socialNetworks text-white">
+            nossos jogos serão de no mínimo 1 contra 1 e no máximo 4 contra 4 serão partidas Only pistol,
+        </p>
+        <p class="text-lg socialNetworks text-white">
+            traduzindo “Só Pistolas”, trazendo assim muito mais adrenalina por ser um jogo com muita rapidez,
+        </p>
+        <p class="text-lg socialNetworks text-white">
+            agilidade e um pouquinho de dor ao ser alvejado rsrsrsrs. Teremos 3 modos de jogos disponíveis
+        </p>
+        <p class="text-lg socialNetworks text-white">
+            o Mata-Mata, Capture a bandeira e o Bomb Squad!
+        </p>
+    </section>
+    <section class="space bg-black">
+        <h1 class="space text-2xl text-white">Modos de jogo</h1>
         <h1 class="text-xl text-white">...</h1>
     </section>
-    <section class="bg-black">
+    <section class="space bg-black">
+        <h1 class="text-2xl text-white">Valores</h1>
+        <h1 class="text-xl text-white">...</h1>
+    </section>
+    <section class="space bg-black">
         <h1 class="text-2xl text-white">Redes Socias</h1><br>
         <nav class="socialNetworks">
-            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Instagram"><a href="#">Instagram</a></button><br><br>
+            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Instagram"><a href="https://www.instagram.com/cqbcaveiraairsoft/" target="_blank">Instagram</a></button><br><br>
             <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Facebook"><a href="#">Facebook</a></button><br><br>
             <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Whatsap"><a href="#">Whatsaap</a></button><br><br>
         </nav>
     </section>
-    <section class="bg-black">
-        <h1 class="text-2xl text-white">Localização</h1><br>
-        <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d708.1286432181121!2d-43.680514743785984!3d-22.975384070838867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bf0fa29d67273%3A0xe21d2e9f9a452d6d!2sEstr.%20Santo%20Ant%C3%B4nio%20-%20Sepetiba%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2023535-650!5e0!3m2!1spt-BR!2sbr!4v1693876423936!5m2!1spt-BR!2sbr" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe><br>
+    <section class="space bg-black">
+        <h1 class="text-2xl text-white">Localização</h1>
+        <iframe class="space maps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d708.129330772934!2d-43.6808028892581!3d-22.975252855069492!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1693942954086!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
-    <footer class="bg-yellow-900">
+    <footer class="space bg-yellow-900">
         <h1 class="text-white">Todos os Direitos Reservados © CQB caveira airsoft</h1>
     </footer>
 </body>
