--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/style.css" type="text/css" rel="stylesheet"> 
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Airsoft</title>
+    <title>CQB Caveira</title>
 </head>
 <body>
     <section class="bg-yellow-900">
@@ -25,42 +25,16 @@
         </p>
     </section>
     <section class="space bg-black">
-        <h1 class="text-2xl text-white">Arena</h1>
-        <p class="text-lg socialNetworks text-white">
-            Nossa arena possui uma área de 525m² entre obstáculos e mata, por ser um CQB (Close Quarters Battle)
-        </p>
-        <p class="text-lg socialNetworks text-white">
-            nossos jogos serão de no mínimo 1 contra 1 e no máximo 4 contra 4 serão partidas Only pistol,
-        </p>
-        <p class="text-lg socialNetworks text-white">
-            traduzindo “Só Pistolas”, trazendo assim muito mais adrenalina por ser um jogo com muita rapidez,
-        </p>
-        <p class="text-lg socialNetworks text-white">
-            agilidade e um pouquinho de dor ao ser alvejado rsrsrsrs. Teremos 3 modos de jogos disponíveis
-        </p>
-        <p class="text-lg socialNetworks text-white">
-            o Mata-Mata, Capture a bandeira e o Bomb Squad!
-        </p>
-    </section>
-    <section class="space bg-black">
-        <h1 class="space text-2xl text-white">Modos de jogo</h1>
-        <h1 class="text-xl text-white">...</h1>
-    </section>
-    <section class="space bg-black">
-        <h1 class="text-2xl text-white">Valores</h1>
-        <h1 class="text-xl text-white">...</h1>
-    </section>
-    <section class="space bg-black">
-        <h1 class="text-2xl text-white">Redes Socias</h1><br>
-        <nav class="socialNetworks">
+        <h1 class="text-2xl text-white">Redes Socias</h1>
+        <nav class="space socialNetworks">
             <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Instagram"><a href="https://www.instagram.com/cqbcaveiraairsoft/" target="_blank">Instagram</a></button><br><br>
             <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Facebook"><a href="#">Facebook</a></button><br><br>
-            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Whatsap"><a href="#">Whatsaap</a></button><br><br>
+            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Whatsap"><a href="#">Whatsaap</a></button><br>
         </nav>
     </section>
     <section class="space bg-black">
         <h1 class="text-2xl text-white">Localização</h1>
-        <iframe class="space maps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d708.129330772934!2d-43.6808028892581!3d-22.975252855069492!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1693942954086!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d866.7884577418878!2d-43.68104476781846!3d-22.97521430426812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1693947053640!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
     <footer class="space bg-yellow-900">
         <h1 class="text-white">Todos os Direitos Reservados © CQB caveira airsoft</h1>
