--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/cbq.ico" type="image/x-icon">
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/style.css" type="text/css" rel="stylesheet"> 
     <script src="https://cdn.tailwindcss.com"></script>
@@ -12,6 +13,16 @@
     <section class="bg-yellow-900">
         <h1 class="text-2xl text-white">CQB Caveira Airsoft &#128299</h1>
     </section>
+    <section>
+        <div class="space navbar" id="myNavbar">
+            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="#home">Arena</a></button>
+            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="#home">Modos de Jogo</a></button>
+            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="#home">Valores</a></button>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                &#9776;
+            </a>
+        </div>
+    </section><br><br>
     <section class="bg-black">
         <h1 class="space text-2xl text-white">Sobre</h1>
         <p class="text-lg socialNetworks text-white">
