--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </a>
         </div>
     </section><br><br>
-    <section class="bg-black">
+    <section class="background bg-black">
         <h1 class="space text-2xl text-white">Sobre</h1>
         <p class="text-lg socialNetworks text-white">
             Somos amantes e admiradores do esporte, buscamos trazer para o local um novo espaço de lazer e divulgar o esporte
