--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </section><br><br>
     <section class="background bg-black">
-        <h1 class="space text-2xl text-white">Sobre</h1>
+        <h1 class="space text-2xl text-yellow-500">Sobre</h1>
         <p class="text-lg socialNetworks text-white">
             Somos amantes e admiradores do esporte, buscamos trazer para o local um novo espaço de lazer e divulgar o esporte
         </p>
@@ -35,16 +35,16 @@
             é o rei ou a rainha da bala, se sinta como em um jogo na vida real demonstre sua habilidade e sua mira em nossa arena.
         </p>
     </section>
-    <section class="space bg-black">
-        <h1 class="text-2xl text-white">Redes Socias</h1>
+    <section class="space">
+        <h1 class="text-2xl text-yellow-500">Redes Socias</h1>
         <nav class="space socialNetworks">
             <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Instagram"><a href="https://www.instagram.com/cqbcaveiraairsoft/" target="_blank">Instagram</a></button><br><br>
             <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Facebook"><a href="#">Facebook</a></button><br><br>
             <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Whatsap"><a href="#">Whatsaap</a></button><br>
         </nav>
     </section>
-    <section class="space bg-black">
-        <h1 class="text-2xl text-white">Localização</h1>
+    <section class="space">
+        <h1 class="text-2xl text-yellow-500">Localização</h1>
         <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d525.423815680618!2d-43.6808744701469!3d-22.975182016397174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1spt-BR!2sbr!4v1693966637112!5m2!1spt-BR!2sbr" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
     <footer class="space bg-yellow-900">
