--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section class="space">
         <h1 class="text-2xl text-yellow-500">Localização</h1>
         <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d525.423815680618!2d-43.6808744701469!3d-22.975182016397174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1spt-BR!2sbr!4v1693966637112!5m2!1spt-BR!2sbr" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </section><br><br>
+    </section><br>
     <footer class="space bg-yellow-900">
         <h1 class="text-white">Todos os Direitos Reservados © CQB caveira airsoft</h1>
     </footer>
