Redirecionamento no botão

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <section class="space">
         <h1 class="text-2xl text-yellow-500">Redes Socias</h1>
         <nav class="space socialNetworks">
-            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Instagram"><a href="https://www.instagram.com/cqbcaveiraairsoft/" target="_blank">Instagram</a></button><br><br>
-            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Facebook"><a href="#">Facebook</a></button><br><br>
-            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Whatsap"><a href="#">Whatsaap</a></button><br>
+            <button class="special bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Instagram"><a href="https://www.instagram.com/cqbcaveiraairsoft/" target="_blank">Instagram</a></button><br><br>
+            <button class="special bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Facebook"><a href="mailto:cqbcaveiraairsoft@gmail.com" target="_blank">E-mail</a></button><br><br>
+            <button class="special bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Whatsap"><a href="https://wa.me/5521979260221" target="_blank">Whatsaap</a></button><br>
         </nav>
     </section>
     <section class="space">
