--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/cbq.ico" type="image/x-icon">
     <link href="css/reset.css" rel="stylesheet">
-    <link href="css/style.css" type="text/css" rel="stylesheet"> 
+    <link href="css/style.css" type="text/css" rel="stylesheet">
+    <script src="scripts/script.js"></script> 
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>CQB Caveira</title>
 </head>
 <body>
@@ -15,9 +17,9 @@
     </section>
     <section>
         <div class="space navbar" id="myNavbar">
-            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="#home">Arena</a></button>
-            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="#home">Modos de Jogo</a></button>
-            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="#home">Valores</a></button>
+            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="#home" onclick="message()">Arena</a></button>
+            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="https://drive.google.com/file/d/1B7XDDyuh7AAAuejJ1SqS1jaMBpVDKT4j/view?usp=sharing" target="_blank">Modos de Jogo</a></button>
+            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="https://drive.google.com/file/d/1Xxu0C_ZFmAda1qoiz2y7mJpUIFTjqtLp/view?usp=sharing" target="_blank">Valores</a></button>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 &#9776;
             </a>
