--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="#home" onclick="message()">Arena</a></button>
             <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="https://drive.google.com/file/d/1B7XDDyuh7AAAuejJ1SqS1jaMBpVDKT4j/view?usp=sharing" target="_blank">Modos de Jogo</a></button>
             <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="https://drive.google.com/file/d/1Xxu0C_ZFmAda1qoiz2y7mJpUIFTjqtLp/view?usp=sharing" target="_blank">Valores</a></button>
+            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="#home" onclick="message2()">O que é airsoft?</a></button>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 &#9776;
             </a>
