--- a/index.html
+++ b/index.html
@@ -50,8 +50,14 @@
         <h1 class="text-2xl text-yellow-500">Localização</h1>
         <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d525.423815680618!2d-43.6808744701469!3d-22.975182016397174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1spt-BR!2sbr!4v1693966637112!5m2!1spt-BR!2sbr" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
+    <div style="background-color: black">
+        <div class="bandeiras-align">
+            <h1 class="space text-2xl text-yellow-500">Formas de Pagamento.</h1>
+            <img loading="tw" src="https://cdn.shopify.com/s/files/1/0655/0696/7773/files/BANDERIAS.png?v=1669918376" width="320px">
+        </div>
+    </div>        
     <footer class="space bg-yellow-900">
         <h1 class="text-white">Todos os Direitos Reservados © CQB caveira airsoft</h1>
-    </footer>
+    </footer>      
 </body>
 </html>
