--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
         <h1 class="text-2xl text-white">CQB Caveira Airsoft &#128299</h1>
     </section>
     <section>
-        <div class="space navbar" id="myNavbar">
+        <div class="spaceMenu navbar" id="myNavbar">
             <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="#home" onclick="message()">Arena</a></button>
-            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="https://drive.google.com/file/d/1B7XDDyuh7AAAuejJ1SqS1jaMBpVDKT4j/view?usp=sharing" target="_blank">Modos de Jogo</a></button>
-            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="https://drive.google.com/file/d/1Xxu0C_ZFmAda1qoiz2y7mJpUIFTjqtLp/view?usp=sharing" target="_blank">Valores</a></button>
+            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="https://drive.google.com/file/d/1O6cekeRdTOhAx4Bk14qOdRDpZvGuLtbq/view?usp=sharing" target="_blank">Modos de Jogo</a></button>
+            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="https://drive.google.com/file/d/13YRNM26hk_QwH1ckRHdyq2F3pfFnqeqL/view?usp=sharing" target="_blank">Valores</a></button>
             <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="#home" onclick="message2()">O que é airsoft?</a></button>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 &#9776;
             </a>
         </div>
-    </section><br><br>
-    <section class="background bg-black">
-        <h1 class="space text-2xl text-yellow-500">Sobre</h1>
+    </section>
+    <section class="spaceAbout bg-black">
+        <h1 class="text-2xl text-yellow-500">Sobre</h1>
         <p class="text-lg socialNetworks text-white">
             Somos amantes e admiradores do esporte, buscamos trazer para o local um novo espaço de lazer e divulgar o esporte
         </p>
@@ -46,16 +46,17 @@
             <button class="special bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Whatsap"><a href="https://wa.me/5521979260221" target="_blank">Whatsaap</a></button><br>
         </nav>
     </section>
-    <section class="space">
+    <section class="spaceLocation">
         <h1 class="text-2xl text-yellow-500">Localização</h1>
-        <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d229.58233721000275!2d-43.680804371934066!3d-22.975353257634158!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1694372262695!5m2!1spt-BR!2sbr" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <h1 class="text-lg text-white">Estrada do Piaí</h1>
+        <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d525.4237179778622!2d-43.68076198757579!3d-22.97520714629848!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1spt-BR!2sbr!4v1694393428926!5m2!1spt-BR!2sbr" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
-    <div>
+    <section class="space">
         <div class="bandeiras-align">
             <h1 class="space text-2xl text-yellow-500">Formas de Pagamento.</h1>
             <img loading="tw" src="https://cdn.shopify.com/s/files/1/0655/0696/7773/files/BANDERIAS.png?v=1669918376" width="320px">
         </div>
-    </div>        
+    </section>        
     <footer class="space bg-yellow-900">
         <h1 class="text-white">Todos os Direitos Reservados © CQB caveira airsoft</h1>
     </footer>      
