Mudando cores do botão

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </section>
     <section>
         <div class="spaceMenu navbar" id="myNavbar">
-            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="#home" onclick="message()">Arena</a></button>
-            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="https://drive.google.com/file/d/1O6cekeRdTOhAx4Bk14qOdRDpZvGuLtbq/view?usp=sharing" target="_blank">Modos de Jogo</a></button>
-            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="https://drive.google.com/file/d/13YRNM26hk_QwH1ckRHdyq2F3pfFnqeqL/view?usp=sharing" target="_blank">Valores</a></button>
-            <button class="bg-blue-500 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="#home" onclick="message2()">O que é airsoft?</a></button>
+            <button class="bg-yellow-950 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="#home" onclick="message()">Arena</a></button>
+            <button class="bg-yellow-950 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="https://drive.google.com/file/d/1O6cekeRdTOhAx4Bk14qOdRDpZvGuLtbq/view?usp=sharing" target="_blank">Modos de Jogo</a></button>
+            <button class="bg-yellow-950 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="https://drive.google.com/file/d/13YRNM26hk_QwH1ckRHdyq2F3pfFnqeqL/view?usp=sharing" target="_blank">Valores</a></button>
+            <button class="bg-yellow-950 hover:bg-orange-500 text-white font-bold py-1 px-1 w-50 rounded" value="Instagram"><a class="text-white" href="#home" onclick="message2()">O que é airsoft?</a></button>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 &#9776;
             </a>
@@ -41,9 +41,9 @@
     <section class="space">
         <h1 class="text-2xl text-yellow-500">Redes Socias</h1>
         <nav class="space socialNetworks">
-            <button class="special bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Instagram"><a href="https://www.instagram.com/cqbcaveiraairsoft/" target="_blank">Instagram</a></button><br><br>
-            <button class="special bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Facebook"><a href="mailto:cqbcaveiraairsoft@gmail.com" target="_blank">E-mail</a></button><br><br>
-            <button class="special bg-blue-500 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Whatsap"><a href="https://wa.me/5521979260221" target="_blank">Whatsaap</a></button><br>
+            <button class="special bg-yellow-950 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Instagram"><a href="https://www.instagram.com/cqbcaveiraairsoft/" target="_blank">Instagram</a></button><br><br>
+            <button class="special bg-yellow-950 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Facebook"><a href="mailto:cqbcaveiraairsoft@gmail.com" target="_blank">E-mail</a></button><br><br>
+            <button class="special bg-yellow-950 hover:bg-orange-500 text-white font-bold py-2 px-4 w-50 rounded" value="Whatsap"><a href="https://wa.me/5521979260221" target="_blank">Whatsaap</a></button><br>
         </nav>
     </section>
     <section class="spaceLocation">
